--- a/Assignment5/Assignment 5 SPARQL.ipynb
+++ b/Assignment5/Assignment 5 SPARQL.ipynb
@@ -5,14 +5,14 @@
    "id": "f4dd638a",
    "metadata": {},
    "source": [
-    "Assignment 5 - SPARQL queries\n",
+    "# Assignment 5 - SPARQL queries\n",
     "\n",
-    "Student: Álvaro García López"
+    "# Student: Álvaro García López"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "f2f3a61a",
    "metadata": {},
    "outputs": [
@@ -263,7 +263,7 @@
     "\n",
     "SELECT (COUNT (?specie) AS ?number_of_species)\n",
     "\n",
-    "# We ask for the \"resource\" tagged with the rdf:type (\"a\") \"up:Taxon\"\n",
+    "# We ask for the number \"resource\" tagged with the rdf:type \"up:Taxon\"\n",
     "WHERE {\n",
     "  ?specie a up:Taxon .\n",
     "}"
@@ -279,14 +279,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "bb8dc6b8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div class=\"krn-spql\"><table><tr class=hdr><th>count</th></tr><tr class=odd><td class=val>0</td></tr></table><div class=\"tinfo\">Total: 1, Shown: 1</div></div>"
+       "<div class=\"krn-spql\"><table><tr class=hdr><th>count</th></tr><tr class=odd><td class=val>1057158</td></tr></table><div class=\"tinfo\">Total: 1, Shown: 1</div></div>"
       ]
      },
      "metadata": {},
@@ -298,6 +298,8 @@
     "\n",
     "SELECT (COUNT (DISTINCT ?specie) AS ?count)\n",
     "\n",
+    "# Again, we ask for the number \"resource\" tagged with the rdf:type up:Taxon\"\n",
+    "# but only when there is a \"up:Protein\" associated with the predicate \"up:organism\"\n",
     "WHERE {\n",
     "  ?protein a up:Protein .\n",
     "  ?protein up:organism ?specie .\n",
@@ -438,22 +440,6 @@
     "    ?mnx_reac rdfs:label ?mnxr_label . # get the label of that mnx_reac (mnxr_label)\n",
     "}"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a0d4d44b",
-   "metadata": {},
-   "source": [
-    "Q10: 5 POINTS:  What is the official Gene ID (UniProt calls this a “mnemonic”) and the MetaNetX Reaction identifier (mnxr…..) for the protein that has “Starch synthase” catalytic activity in Clostridium difficile (taxon 272563)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c8500530",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
